@@ -75,6 +75,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 
 @item Tabbed Windowing Support [Yann Hodique, Scott Scriven, Nathan Froyd, Christopher Bratusek]
 
+@item Tabbed Windowing Support: Raise Tabs on hover [Christopher Bratusek]
+
 @item Warp cursor to cycled windows, if warp-cursor is enabled [Christopher Bratusek]
 
 @item Warp cursor to unmaximied windows, if warp-cursor is enabled [Fernando Carmona Varo]
@@ -89,7 +91,7 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 
 @item Make Window History appear in Sawfish-UI [Christopher Bratusek]
 
-@item Added cycle-among-groups{,-backwards} commands (cycle between the most recently used window of groups) [Fernando Carmano Varo]
+@item Added cycle-among-groups(,-backwards) commands (cycle between the most recently used window of groups) [Fernando Carmano Varo]
 @end itemize
 
 @item Other changes:
