@@ -6,6 +6,8 @@
 
 	* lisp/sawfish/wm/autoload.jl: autoload Tabs-group
 
+	* lisp/sawfish/wm/tabs/tab.jl: Tabbed Windowing Support: Raise Tabs on hover
+
 2009-05-06  Christopher Bratusek <zanghar@freenet.de>
 	* sawfish.spec.in: don't re-define %{_host} [Ritz]
 
